// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Organization.Events anonymous should be able to fetch approved projects from organization 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "title": "Event orga supprimé",
          },
        },
        Object {
          "node": Object {
            "title": "Parthenay party",
          },
        },
      ],
      "totalCount": 2,
    },
    "id": "T3JnYW5pemF0aW9uOm9yZ2FuaXphdGlvbjE=",
  },
}
`;

exports[`Internal|Organization.Events orga member should be able to fetch deleted events 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "title": "Event orga supprimé",
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "T3JnYW5pemF0aW9uOm9yZ2FuaXphdGlvbjE=",
  },
}
`;

exports[`Internal|Organization.Events orga member should be able to fetch events filtered by query 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "title": "Event orga supprimé",
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "T3JnYW5pemF0aW9uOm9yZ2FuaXphdGlvbjE=",
  },
}
`;
